Mon Jun 20 11:06:27 1994  Ian Lance Taylor  (ian@sanguine.cygnus.com)

	* mipsbsd.c (MY_final_link_callback): Define to avoid warning.

	* hp300hpux.c (MY_final_link_callback): Define to avoid warning.
	(BMAGIC, QMAGIC): Define; used by aoutx.h.
	(MY(slurp_symbol_table)): Change translate_from_native_sym_flags
	calls to use new parameters.

Fri Jun 17 14:45:32 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* aout-target.h (MY(callback)): Set the alignments of the text,
	data and bss sections after determining the architecture.

	* sunos.c (sunos_add_one_symbol): Treat a common symbol from a
	dynamic object as being in the .bss section of the object, rather
	than as being undefined.

Fri Jun 17 11:16:50 1994  Jeff Law  (law@snake.cs.utah.edu)

	* libhppa.h (bfd_hppa_insn2fmt, hppa_rebuild_insn): Make INLINE.

	* elf32-hppa.h (elf_hppa_final_processing): Delete decl.

Thu Jun 16 23:36:23 1994  Jeff Law  (law@snake.cs.utah.edu)

	* elfcode.h (elf_link_input_bfd): Don't try to read local symbols
	if there aren't any in the input file.

Thu Jun 16 14:25:22 1994  Eric Youngdale  (ericy@cais.cais.com)

	* i386linux.c: Many new functions and definitions for linker
	support for Linux shared libraries.
	* bfd-in.h (bfd_linux_size_dynamic_sections): Declare.
	* bfd-in2.h: Rebuild.

Thu Jun 16 14:23:46 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* config.bfd: If second argument is ``_'', then, instead of
	echoing config file name, echo whether target uses leading
	underscores on symbol names.  Add appropriate settings to
	different cases.  Used by binutils/configure.in to set default for
	c++filt.

	* elfcode.h (elf_bfd_final_link): If trying to generate a shared
	object, warn and return false.

	* aoutx.h (NAME(aout,some_aout_object_p)): Accept BMAGIC objects
	and treat them as OMAGIC.

Wed Jun 15 18:02:21 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)

	Enable sparc v9 support for release.  Note that this is still a